# pgr_engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  imgui.ini  profile_editor.sh  run_editor.sh  run_editor_backup.sh  run_editor_valgrind.sh  run_test.sh  test.shader
npgr_framework/: CMakeLists.txt
npgr_framework/include/: app.h  error_handling.h  events.h  layers.h  npgr.h  shader.h  shader_program.h  timer.h  window_wrapper.h
npgr_framework/include/events/: event.h  mouse_events.h
npgr_framework/include/gl_wrappers/: buffer.h  vertex_array.h  vertex_attribute.h
npgr_framework/include/layers/: basic_layer.h  imgui_layer.h
npgr_framework/src/: app.cpp  error_handling.cpp  layers.cpp  npgr.cpp  shader.cpp  shader_program.cpp  timer.cpp  window_wrapper.cpp
npgr_framework/src/gl_wrappers/: buffer.cpp  vertex_array.cpp  vertex_attribute.cpp
npgr_framework/src/layers/: imgui_layer.cpp
npgr_framework/src/objects/: mesh.cpp
pgr_editor/: CMakeLists.txt  animator_gui.h  component_gui.cpp  component_gui.h  fract.dae  god  imgui.ini  main.cpp  old_test_layer.h  scene_gui.cpp  scene_gui.h  scene_layer.h  scene_viewer.cpp  scene_viewer.h  test.json  testlight
pgr_editor/assets/weed/: weed17.mtl
pgr_editor/assets/weed_dae/: untitled.dae
pgr_editor/assets/weed_fbx/: weed.fbx
pgr_editor/assets/weed_obj/: weed.mtl
pgr_editor/resources/: phong!.glsl  scene2.dae
pgr_editor/resources/shaders/: flat.glsl  phong.glsl  skybox.glsl
pgr_editor/src/: fog_gui.cpp  fog_gui.h  scene_gui.cpp  scene_gui.h  scene_layer.h
pgr_editor/src/component_gui/: ccurve_animator_gui.h  component_gui.cpp  component_gui.h  kframe_animator_gui.h
pgr_engine/: CMakeLists.txt  imgui.ini
pgr_engine/include/: app.h  asset_manager.h.shit  error_handling.h  imgui_helpers.h  layers.h  shader_program.h  timer.h  window_wrapper.h
pgr_engine/include/assets/: material.h  phong_material.h  texture.h
pgr_engine/include/assets/materials/: flat_color_material.h  material.h  phong_material.h  skybox_material.h
pgr_engine/include/assets/textures/: cubemap.h  texture.h  texture2d.h
pgr_engine/include/cerealization/: archive_types.h  glm_serializers.h  std_serializers.h
pgr_engine/include/components/: all_components.h  basic_components.h  bounding_box.h  camera_component.h  camera_controller.h  component_predecl.h  coons_curve_animator.h  flying_camera_controller.h  hierarchy_component.h  keyframe_anim_component.h  light_components.h  mesh_component.h  script_component.h  tag_component.h  transform_component.h
pgr_engine/include/events/: event.h  keyboard_events.h  mouse_events.h
pgr_engine/include/gl_wrappers/: buffer.h  buffer_layout.h  vertex_array.h  vertex_attribute.h
pgr_engine/include/input/: keyboard.h  mouse.h
pgr_engine/include/layers/: basic_layer.h  imgui_layer.h
pgr_engine/include/math/: aabb.h  curve.h  interpolation.h
pgr_engine/include/primitives/: buffer.h  buffer_layout.h  builtin_meshes.h  shader_program.h  vertex_array.h
pgr_engine/include/renderer/: basic_renderer.h  camera.h  material.h  renderer.h  sorting_renderer.h
pgr_engine/include/scene/: entity.h  scene.h  scene_graph.h
pgr_engine/include/utility/: aligned.h  call_at_scope_exit.h  packed.h
pgr_engine/src/: app.cpp  error_handling.cpp  layers.cpp  shader_program.cpp  timer.cpp  window_wrapper.cpp
pgr_engine/src/assets/: phong_material.cpp  shader_program.cpp  texture.cpp
pgr_engine/src/assets/materials/: flat_сolor_material.cpp  phong_material.cpp  skybox_material.cpp
pgr_engine/src/assets/textures/: cubemap.cpp  texture2d.cpp
pgr_engine/src/components/: camera_controller.cpp  coons_curve_animator.cpp  keyframe_anim_component.cpp
pgr_engine/src/gl_wrappers/: buffer.cpp  buffer_layout.cpp  vertex_array.cpp  vertex_attribute.cpp
pgr_engine/src/layers/: imgui_layer.cpp
pgr_engine/src/primitives/: buffer_layout.cpp  builtin_meshes.cpp  shader_program.cpp  vertex_array.cpp
pgr_engine/src/renderer/: basic_renderer.cpp  camera.cpp  sorting_renderer.cpp
pgr_engine/src/scene/: entity.cpp  scene.cpp  scene_import.cpp
test/: CMakeLists.txt  imgui.ini  test.cpp
test/resources/: phong!.glsl
